[package]
name = "semver-parser"
version = "0.8.0" # remember to update html_root_url
authors = ["Steve Klabnik <steve@steveklabnik.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/steveklabnik/semver-parser"
homepage = "https://github.com/steveklabnik/semver-parser"
documentation = "https://docs.rs/semver-parser"
description = """
Parsing of the semver spec.
"""

keywords = ["parser", "semver", "version", "semantic"]
categories = ["Development tools", "Parsing"]

readme = "README.md"

[badges]
travis-ci = { repository = "steveklabnik/semver-parser" }
